ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,18 @@
 *~
 tags
-doc/html
-doc/*.log
-missionlib/testing/*.xcodeproj/*
 .DS_Store
 build*
 .nfs*
 share/
 __pycache__
-pymavlink/generator/C/
-pymavlink/generator/C/
-pymavlink/generator/python/
-pymavlink/generator/python/
-apidocs/
-pymavlink/generator/message_definitions
+generator/C/
+generator/C/
+generator/python/
+generator/python/
+generator/message_definitions
 *.swp
-pymavlink/dialects/
-pymavlink/MANIFEST
-pymavlink/dist
+MANIFEST
+dist/
 pymavlink.egg-info/
 .pydevproject
 .project
@@ -26,3 +21,4 @@ pymavlink.egg-info/
 include/
 .tags*
 include/mavlink/v1.0
+
