--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
   # Set pythonpath
 
   # install
+  - pip install -r requirements.txt
   - git clone git://github.com/mavlink/mavlink.git
   - ln -s $PWD/mavlink/message_definitions ../
   - python setup.py build install
