--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: python
 python:
-  - "2.6"
-  - "2.7"
-  - "3.2"
-  - "3.3"
+  - "2.7.12"
+  - "3.5"
+
+install:
+  - pip install -r requirements.txt
+  - pip install flake8
+
+before_script:
+  # --exit-zero means that flake8 will only warn and not stop the build
+  # 127 characters is the width of a GitHub editor
+  flake8 . --count --max-line-length=127 --statistics --exit-zero
 
 script:
   # NOTE: we must do all testing on the installed python package, not 
@@ -13,7 +20,6 @@ script:
   # Set pythonpath
 
   # install
-  - pip install -r requirements.txt
   - git clone git://github.com/mavlink/mavlink.git
   - ln -s $PWD/mavlink/message_definitions ../
   - python setup.py build install
