--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_script:
 # E712 comparison to False should be 'if cond is False:' or 'if not cond:'
 # E713 test for membership should be 'not in'
 # E731 do not assign a lambda expression, use a def
+# E999 SyntaxError: invalid syntax
 # F401 'time' imported but unused
 # F403 'from math import *' used; unable to detect undefined names
 # F405 log may be undefined, or defined from star imports: math
@@ -26,7 +27,7 @@ before_script:
 # F821 undefined name 'filename'
 # F841 local variable 'e' is assigned to but never used
 # W191 indentation contains tabs
-  flake8 . --count --exit-zero --max-line-length=127 --select=E401,E402,E502,E701,E703,E711,E712,E713,E731,F401,F403,F405,F811 ,F821,F841,W191 --statistics
+  flake8 . --count --exit-zero --max-line-length=127 --select=E401,E402,E502,E701,E703,E711,E712,E713,E731,E999,F401,F403,F405,F811 ,F821,F841,W191 --statistics
 
 script:
   # NOTE: we must do all testing on the installed python package, not 
