--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_script:
   - SELECT=C,E10,E11,E401,E502,E703,E8,E9,F,W191,W292,W391
   - flake8 . --count --exit-zero --select=${SELECT} --max-complexity=10 --max-line-length=127 --statistics
 script:
-  # NOTE: we must do all testing on the installed python package, not 
+  # NOTE: we must do all testing on the installed python package, not
   # on the build tree. Otherwise the testing is invalid and may not
   # indicate the code actually works
   #
@@ -27,11 +27,16 @@ script:
   - python setup.py build install
 
   # Generate messages
-  - mavgen.py --lang='Python' 	--output=/tmp/ mavlink/message_definitions/v1.0/common.xml
-  - mavgen.py --lang='C' 	--output=/tmp/ mavlink/message_definitions/v1.0/common.xml
-  - mavgen.py --lang='CS' 	--output=/tmp/ mavlink/message_definitions/v1.0/common.xml
-  - mavgen.py --lang='WLua' 	--output=/tmp/ mavlink/message_definitions/v1.0/common.xml
-  - mavgen.py --lang='Java'	--output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='C'	  --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='CS'	  --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='JavaScript' --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='Python'	  --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='WLua'	  --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='ObjC'	  --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='Swift'	  --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='Java'	  --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='C++11'	  --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+
   # Avoid `spurious errors` caused by ~/.npm permission issues
   # ref: https://github.com/travis-ci/travis-ci/issues/2244
   # ref: https://github.com/npm/npm/issues/4815
