--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,16 @@ python:
   - "2.7"
   - "3.4"
   - "3.6"
-
+before_install:
+  - pip install --upgrade pip
 install:
   - pip install -r requirements.txt
   - pip install flake8
-
 before_script:
-  # --exit-zero means that flake8 will only warn and not stop the build
-  flake8 . --exit-zero
-
+  # fail the build if there are Python syntax errors, undefined names, tab indentation
+  - flake8 . --count --select=E901,E999,F821,F822,F823,W191 --show-source --statistics
+  # exit-zero treats all errors as warnings. The GitHub web ui editor is 127 chars wide
+  - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 script:
   # NOTE: we must do all testing on the installed python package, not 
   # on the build tree. Otherwise the testing is invalid and may not
@@ -25,11 +26,11 @@ script:
   - python setup.py build install
 
   # Generate messages
-  - mavgen.py --lang='Python' 	--output=/tmp/ mavlink/message_definitions/v1.0/common.xml
-  - mavgen.py --lang='C' 	--output=/tmp/ mavlink/message_definitions/v1.0/common.xml
-  - mavgen.py --lang='CS' 	--output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='Python' --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='C' 	    --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='CS' 	  --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
   - mavgen.py --lang='WLua' 	--output=/tmp/ mavlink/message_definitions/v1.0/common.xml
-  - mavgen.py --lang='Java'	--output=/tmp/ mavlink/message_definitions/v1.0/common.xml
+  - mavgen.py --lang='Java'	  --output=/tmp/ mavlink/message_definitions/v1.0/common.xml
   # Avoid `spurious errors` caused by ~/.npm permission issues
   # ref: https://github.com/travis-ci/travis-ci/issues/2244
   # ref: https://github.com/npm/npm/issues/4815
