--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "3.4"
   - "3.6"
 before_install:
-  - pip install --upgrade pip 
+  - pip install --upgrade pip
 install:
   - pip install -r requirements.txt
   - pip install flake8
@@ -12,7 +12,8 @@ before_script:
   # fail the build if there are Python syntax errors, undefined names, tab indentation
   - flake8 . --count --select=E901,E999,F821,F822,F823,W191 --show-source --statistics
   # exit-zero treats all errors as warnings. The GitHub web ui editor is 127 chars wide
-  - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+  - SELECT=E101,E401,E502,E703,E9
+  - flake8 . --count --exit-zero --ignore=E,W2 --select=${SELECT} --max-complexity=10 --max-line-length=127 --statistics
 script:
   # NOTE: we must do all testing on the installed python package, not 
   # on the build tree. Otherwise the testing is invalid and may not
