--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ install:
   - pip install flake8
 before_script:
   # fail the build if there are Python syntax errors, undefined names, tab indentation
-  - flake8 . --count --select=E901,E999,F821,F822,F823,W191 --show-source --statistics
+  - flake8 . --count --select=E901,E999,F822,F823,W191 --show-source --statistics
   # exit-zero treats all errors as warnings. The GitHub web ui editor is 127 chars wide
-  - SELECT=C,E10,E11,E401,E502,E703,E9,F,W191,W292,W391
+  - SELECT=C,E10,E11,E401,E502,E703,E8,E9,F,W191,W292,W391
   - flake8 . --count --exit-zero --select=${SELECT} --max-complexity=10 --max-line-length=127 --statistics
 script:
   # NOTE: we must do all testing on the installed python package, not 
