test_generator.sh: test minimal under 2.0

--- a/generator/C/test/posix/Makefile
+++ b/generator/C/test/posix/Makefile
@@ -39,5 +39,8 @@ testmav1.0_ardupilotmega: testmav.c
 testmav2.0_ardupilotmega: testmav.c
 	$(CC) $(CFLAGS) -I../../include_v2.0 -I../../include_v2.0/ardupilotmega -o $@ testmav.c
 
+testmav2.0_minimal: testmav.c
+	$(CC) $(CFLAGS) -I../../include_v2.0 -I../../include_v2.0/minimal -o $@ testmav.c
+
 sha256_test: sha256_test.c
 	$(CC) $(CFLAGS) -I../../include_v2.0 -o $@ sha256_test.c
