run generator from repo, avoiding CI issues

--- a/generator/C/test/posix/Makefile
+++ b/generator/C/test/posix/Makefile
@@ -2,7 +2,7 @@
 # errors in the generator, but without it, we can't run the tests to completion. 
 # particular issues are with pointers to arrays right now. TODO - fix the generator and remove this.
 CFLAGS = -g -Wall -Werror -O0 -Wno-address-of-packed-member
-TESTPROTOCOL = common
+TESTPROTOCOL = ardupilotmega
 ALLPROTOCOLS = minimal test common pixhawk ardupilotmega slugs ualberta
 
 all: 
