--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -25,6 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install -U pip
+        python -m pip install -U wheel
         pip install build
         pip install -U .
     - name: Build package
