--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -20,7 +20,7 @@ jobs:
         python-version: '3.9'
     - name: Install mavlink message
       run: |
-        git clone git://github.com/ArduPilot/mavlink.git
+        git clone https://github.com/ArduPilot/mavlink.git
         ln -s $PWD/mavlink/message_definitions
     - name: Install dependencies
       run: |
