--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,7 +47,7 @@ jobs:
       # install
       - name: Install mavlink message
         run: |
-          git clone git://github.com/ArduPilot/mavlink.git
+          git clone https://github.com/ArduPilot/mavlink.git
           ln -s $PWD/mavlink/message_definitions ../
 
       - name: Install pymavlink
