--- a/generator/javascript/package.json
+++ b/generator/javascript/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "preinstall": "rm -rf implementations",
     "install": "cd .. && ./gen_js.sh",
-    "pretest": "cd ../.. && ./test_gen_js.sh && npm install",
+    "XpretestX": "cd ../.. && ./test_gen_js.sh",
     "test": "cd test ; python3 make_tests.py > made_tests.js ; cd .. ; mocha test",
     "lint": "./node_modules/.bin/eslint ./implementations/mavlink_common_v1.0/mavlink.js ./implementations/mavlink_common_v2.0/mavlink.js"
   }
