--- a/generator/dart/pubspec.yaml
+++ b/generator/dart/pubspec.yaml
@@ -6,8 +6,7 @@ version: 1.0.0
 environment:
   sdk: '>=2.18.4 <3.0.0'
 
-dependencies:
-  binary: ^3.0.1
+dependencies: {}
 
 dev_dependencies:
   lints: ^2.0.0
