--- a/generator/dart/pubspec.yaml
+++ b/generator/dart/pubspec.yaml
@@ -6,7 +6,8 @@ version: 1.0.0
 environment:
   sdk: '>=2.18.4 <3.0.0'
 
-dependencies: {}
+dependencies:
+  crypto: ^3.0.2
 
 dev_dependencies:
   lints: ^2.0.0
