Add stricter lints to Dart

--- a/generator/dart/analysis_options.yaml
+++ b/generator/dart/analysis_options.yaml
@@ -15,13 +15,16 @@ include: package:lints/recommended.yaml
 
 # Uncomment the following section to specify additional rules.
 
-# linter:
-#   rules:
-#     - camel_case_types
+linter:
+  rules:
+    - unused_import: false
 
-# analyzer:
-#   exclude:
-#     - path/to/excluded/files/**
+analyzer:
+  strict-casts: true
+  strict-inference: true
+  strict-raw-types: true
+  # exclude:
+  #   - path/to/excluded/files/**
 
 # For more information about the core and recommended set of lints, see
 # https://dart.dev/go/core-lints
