add dart docs to makefile

--- a/generator/dart/Makefile
+++ b/generator/dart/Makefile
@@ -1,4 +1,4 @@
-.PHONY: test coverage
+.PHONY: test coverage docs
 
 test:
 	@dart test --coverage=./coverage -p "chrome,vm" test/mavlink_test.dart
@@ -12,3 +12,6 @@ coverage: test
 	dart pub global run coverage:format_coverage -i coverage/ $(SOURCES_TO_REPORT) -l > coverage/test/mavlink_test.dart.lcov
 	@perl /c/ProgramData/chocolatey/lib/lcov/tools/bin/genhtml -o ./coverage/report coverage/test/mavlink_test.dart.lcov
 	@echo "Coverage report generated at $(PWD)/coverage/report/index.html"
+
+docs:
+	@dart doc .
