--- a/generator/dart/.gitignore
+++ b/generator/dart/.gitignore
@@ -1,6 +1,8 @@
 # Files and directories created by pub.
 .dart_tool/
 .packages
+doc/api/
+coverage/
 
 # Conventional directory for build outputs.
 build/
