--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,12 +62,13 @@ jobs:
 
       - name: Lint generated python code
         run: |
-          flake8 --ignore='W503,E203,E501,E741' --statistics dialects/
-          if [ "${{ matrix.python-version }}" != "3.5" ]
+          if [ "${{ matrix.python-version }}" = "3.5" ]
           then
+            flake8 --ignore='W503,E203,E501,E741' --statistics dialects/v10/python2/*.py dialects/v20/python2/*.py
+          else
+            flake8 --ignore='W503,E203,E501,E741' --statistics dialects/
             mypy --config-file ./.github/workflows/mypy-generated.ini dialects/v10/*.py dialects/v20/*.py
           fi
-
       - name: Generate messages
         run: |
           ./test_generate_all.sh
