--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,28 +12,16 @@ jobs:
     strategy:
       fail-fast: false  # don't cancel if a job from the matrix fails
       matrix:
-        python-version: [
-            #'2.7', '3.5', '3.6', '3.7', '3.8', '3.9', '3.10',
-            '3.11']
-        experimental: [false]
-        include: 
-          - python-version: '3.12'
-            experimental: true
+        python-version: ['3.5', '3.6', '3.7', '3.8', '3.9', '3.10', '3.11']
 
-    continue-on-error: ${{ matrix.experimental }}
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
-      
+
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
-      - name: Dev dependencies
-        if: matrix.experimental
-        run: |
-          python -m ensurepip --upgrade --default-pip
-          STATIC_DEPS=true pip install lxml
       - name: Install dependencies
         run: |
           pip install flake8 pytest pytest-mock numpy
