--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
       - if: matrix.experimental
-        run: sudo apt-get install -y libxml2 libxslt-dev
+        run: |
+          pip install --upgrade pip setuptools wheel
+          sudo apt-get install -y libxml2 libxslt-dev
       - name: Install dependencies
         run: |
           pip install flake8 pytest pytest-mock numpy
