--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,13 +29,12 @@ jobs:
       - if: matrix.experimental
         run: |
           sudo apt-get install -y libxml2 libxslt-dev
-          # note this satisfies the below numpy dependency.
-          # the version currently on PyPI fails to build on python 3.12
-          pip install git+https://github.com/numpy/numpy.git
+
       - name: Install dependencies
         run: |
           python -m pip install -U setuptools wheel build
-          pip install flake8 pytest pytest-mock numpy
+          pip install flake8 pytest pytest-mock numpy \
+             "numpy @ git+https://github.com/numpy/numpy.git ; python_version >= '3.12'"
           if [ "${{ matrix.python-version }}" != "2.7" ] && [ "${{ matrix.python-version }}" != "3.5" ]
           then
             pip install mypy
