--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,15 +24,16 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           allow-prereleases: true
-      - name: Install build dependencies
-        run: pip install --upgrade pip setuptools wheel
       - if: matrix.experimental
         run: |
-          sudo apt-get install -y libxml2 libxslt-dev
+            sudo apt-get install -y libxml2 libxslt-dev
+  
+      - name: Install build dependencies
+        run: pip install --upgrade pip setuptools wheel
 
       - name: Install dependencies
         run: |
-          python -m pip install -U setuptools wheel build
+          python -m pip install -U setuptools wheel pip
           pip install flake8 pytest pytest-mock numpy \
              "numpy @ git+https://github.com/numpy/numpy.git ; python_version >= '3.12'"
           if [ "${{ matrix.python-version }}" != "2.7" ] && [ "${{ matrix.python-version }}" != "3.5" ]
