--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,12 +35,9 @@ jobs:
         run: |
           python -m pip install -U setuptools wheel pip
           pip install flake8 pytest pytest-mock \
+             "mypy;python_version >= '3.6'" \
              "numpy;python_version < '3.12'" \
              "numpy@git+https://github.com/numpy/numpy.git;python_version >= '3.12'"
-          if [ "${{ matrix.python-version }}" != "2.7" ] && [ "${{ matrix.python-version }}" != "3.5" ]
-          then
-            pip install mypy
-          fi
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           sudo apt update
           sudo apt install -y libgtest-dev g++
