CI: add test for node 12  through 20

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -84,3 +84,35 @@ jobs:
       - name: Test with pytest
         run: |
           python -m pytest
+
+
+  node-tests:
+    name: Node ${{ matrix.node-version }} test
+    runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: ['12', '14', '16', '18', '20']
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          pip install future lxml
+      - uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install mavlink message
+        run: |
+          git clone https://github.com/ArduPilot/mavlink.git
+          ln -s $PWD/mavlink/message_definitions ../
+      - run: cd "generator/javascript" && npm install
+      - name : Test mavlink
+        run: |
+          ./test_gen_js.sh
+          cd "generator/javascript" && npm test
