--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,13 +1,13 @@
 name: Pylint
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.12"]
+        python-version: ["3.8", "3.11"]
     steps:
 
     - name: Checkout
@@ -23,13 +23,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pylint
+        pip install requests 'pylint<=3.2.7'
 
-    - name: Analysing the code with pylint
+    - name: Analysing the code known to be pylint clean
       run: |
-        pylint __init__.py dialects\__init__.py dialects\v09\__init__.py dialects\v09\python2\__init__.py \
-        dialects\v10\__init__.py dialects\v10\python2\__init__.py dialects\v20\__init__.py \
-        examples\__init__.py generator\__init__.py tests\test_mavxml.py tools\__init__.py \
-        mavftp.py mavftp_op.py examples\mavftp_example.py examples\status_msg.py tests\test_mavftp.py \
-        tests\test_mavxml.py
+        pylint __init__.py dialects/__init__.py dialects/v09/__init__.py dialects/v09/python2/__init__.py \
+        dialects/v10/__init__.py dialects/v10/python2/__init__.py dialects/v20/__init__.py \
+        examples/__init__.py generator/__init__.py tests/test_mavxml.py tools/__init__.py \
+        mavftp.py mavftp_op.py examples/mavftp_example.py examples/status_msg.py tests/test_mavftp.py \
+        tests/test_mavxml.py
 #        $(git ls-files '*.py')
