Revert "fixed dfindexer wheel build"
This reverts commit c4a08d1014cb3f748fe122b18854295164d0351d.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,6 @@ include/mavlink/v1.0
 /.vscode
 .idea/
 .venv/
-pymavlink/dfindexer/dfindexer_cy.c
-pymavlink/dfindexer/*.so
-pymavlink/dfindexer/*.pyd
+dfindexer/dfindexer_cy.c
+dfindexer/*.so
+dfindexer/*.pyd
