--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,10 @@
 name: test pymavlink
 
 on: [push, pull_request]
-# paths:
-# - "*"
-# - "!README.md" <-- don't rebuild on doc change
+
+concurrency:
+  group: ci-${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
