--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-mock numpy
+          python3 -m pip install --upgrade pip
+          python3 -m pip install flake8 pytest pytest-mock numpy
           if [ "${{ matrix.python-version }}" != "3.5" ]
           then
             pip install mypy
@@ -78,7 +78,7 @@ jobs:
 
       - name: Test with pytest
         run: |
-          python -m pytest
+          python3 -m pytest
 
 
   node-tests:
