flake8 settings apply only to auto-generated Python code

--- a/.github/workflows/flake8-generated.cfg
+++ b/.github/workflows/flake8-generated.cfg
@@ -1,4 +1,5 @@
-# Enable different config settings than this repo's .flake8 file.
+# These flake8 settings apply only to auto-generated Python code and are
+# different than this repo's .flake8 file settings that apply to hand written code.```
 # E203 whitespace before ':'
 # E302 expected 2 blank lines, found 1
 # E305 expected 2 blank lines after class or function definition, found 1
